# negmas-rl-tutorial

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: publish.yml  rtd-preview.yml  test.yml
docs/: index.md
docs/css/: custom.css
docs/notebooks/: Example.ipynb
scripts/: gen_ref_pages.py  tag_remover.py
src/negmas_rl/: __init__.py  action.py  common.py  component.py  experiment.py  negotiator.py  negotiators.py  obs.py  reward.py  utils.py
src/negmas_rl/algorithms/: qlearning.py
src/negmas_rl/cli/: cli.py  constants.py
src/negmas_rl/cli/experiments/: anac2024.py  common.py  scml.py  scml_common.py  scml_dynamic.py  scml_single.py
src/negmas_rl/env/: __init__.py  gymenv.py
src/negmas_rl/generators/: __init__.py  assigner.py  mechanism.py  negotiator.py  scenario.py
src/negmas_rl/helpers/: negotiators.py
src/negmas_rl/trainers/: __init__.py  sb3.py
tests/: test_action_decoders.py  test_enum.py  test_gym_env.py  test_obs_encoders.py  test_with_trade.py
