[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negmas-rl"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
description = "A simple RL wrapper for negotiations using negmas"
dependencies = [
 "negmas>=0.11.5",
 "gymnasium>=1.0.0",
 "grpcio>=1.70.0",
 "tensorboard>=2.19.0",
 "stable-baselines3>=2.4.1",
 "tqdm>=4.67.1",
 "rich>=13.9.4",
]
authors = [
    {name = "Yasser Mohammad", email = "y.mohammad@nec.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.uv.sources]
negmas = { git = "https://github.com/yasserfarouk/negmas" }

[project.urls]
source = "https://github.com/yasserfarouk/negmas-rl"
tracker = "https://github.com/yasserfarouk/negmas-rl/issues"
documentation = "https://negmas-rl.readthedocs.io"

[project.optional-dependencies]
test = [
    "mypy",
    "hypothesis",
    "pytest",
    "pytest-cov",
]
doc = [
	"mkdocs",
	"mkdocstrings",
	"mkdocstrings[python]",
	"mkdocs-gen-files",
	"mkdocs-literate-nav",
	"mkdocs-section-index",
	"mkdocs-material",
	"mkdocs-jupyter",
	"notebook>=7.3.2",
	"ipywidgets>=8.1.5",
]
rl = [
	"torchrl>=0.6.0",
	"stable-baselines3>=2.4.1",
 ]
testing = [
    "hypothesis>=6.123.7",
    "pytest>=8.3.4",
]
# docs = [
#     # "jupyter>=1.1.1",
#     # "jupyter-contrib-nbextensions>=0.7.0",
# ]
[project.scripts]
negmasrl = "negmas_rl.cli.cli:app"

[tool.pdm.version]
source = "scm"

[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # Pydocstyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "negmas_rl"
disallow_untyped_defs = true

# Ignore certain missing imports
# [[tool.mypy.overrides]]
# module = "thirdparty.*"
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [ "tests", "src" ]

[dependency-groups]
dev = [
    "hypothesis>=6.123.7",
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
]
